<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_foot"
        android:autofillHints="Select Insole"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/left_foot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
<!--        android:background="@drawable"/>-->
    <com.flyn.sarcopenia_project.viewer.DeviceSelector
        android:id="@+id/left_foot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/device_left" />

    <com.flyn.sarcopenia_project.viewer.DeviceSelector
        android:id="@+id/right_foot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/device_right" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:constraint_referenced_ids="left_foot,right_foot"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toTopOf="@id/start_sampling_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_sampling_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/start_sampling"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow" />

</androidx.constraintlayout.widget.ConstraintLayout>